<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="theme_preference"
        android:title="@string/pref_title_theme"
        android:summary="@string/pref_summary_theme"
        android:entries="@array/theme_entries"
        android:entryValues="@array/theme_values"
        android:defaultValue="light" />

    <SwitchPreferenceCompat
        android:key="show_extra_info"
        android:title="@string/pref_title_extra_info"
        android:summary="@string/pref_summary_extra_info"
        android:defaultValue="true" />

    <ListPreference
        android:key="language_preference"
        android:title="@string/pref_title_language"
        android:summary="@string/pref_summary_language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:defaultValue="es" />

</PreferenceScreen>

